@@ -2,12 +2,13 @@ package com.joebrooks.showmethecoin.trade.upbit.ticker;
 
 import com.joebrooks.showmethecoin.trade.upbit.CoinType;
 import com.joebrooks.showmethecoin.trade.upbit.client.UpBitClient;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.web.util.UriComponents;
 import org.springframework.web.util.UriComponentsBuilder;
-
-import java.util.Arrays;
 
 @Service
 @RequiredArgsConstructor
@@ -16,15 +17,17 @@ public class TickerService {
 
     private final UpBitClient upBitClient;
 
-    public TickerResponse getTicker(CoinType coinType){
+    public List<TickerResponse> getTicker(CoinType... coinTypes){
+        List<String> types = Arrays.stream(coinTypes).map(CoinType::getName).collect(Collectors.toList());
+
 
         UriComponents uri = UriComponentsBuilder.newInstance()
                 .path("/ticker")
-                .queryParam("markets", coinType.getName())
+                .queryParam("markets", types)
                 .build();
 
 
-        return Arrays.asList(upBitClient.get(uri.toString(), TickerResponse[].class)).get(0);
+        return List.of(upBitClient.get(uri.toString(), TickerResponse[].class));
     }
 
 }
